--- a/.vitepress/theme/fonts.css
+++ b/.vitepress/theme/fonts.css
@@ -11,7 +11,7 @@
     font-style: italic;
     font-weight: 100;
     font-display: swap;
-    src: url(fonts/Roboto-italic-100.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-100.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -21,7 +21,7 @@
     font-style: italic;
     font-weight: 100;
     font-display: swap;
-    src: url(fonts/Roboto-italic-100.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-100.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -31,7 +31,7 @@
     font-style: italic;
     font-weight: 300;
     font-display: swap;
-    src: url(fonts/Roboto-italic-300.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-300.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -41,7 +41,7 @@
     font-style: italic;
     font-weight: 300;
     font-display: swap;
-    src: url(fonts/Roboto-italic-300.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-300.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -51,7 +51,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url(fonts/Roboto-italic-400.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-400.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -61,7 +61,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url(fonts/Roboto-italic-400.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-400.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -71,7 +71,7 @@
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: url(fonts/Roboto-italic-500.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-500.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -81,7 +81,7 @@
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: url(fonts/Roboto-italic-500.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-500.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -91,7 +91,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url(fonts/Roboto-italic-700.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-700.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -101,7 +101,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url(fonts/Roboto-italic-700.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-700.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -111,7 +111,7 @@
     font-style: italic;
     font-weight: 900;
     font-display: swap;
-    src: url(fonts/Roboto-italic-900.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-900.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -121,7 +121,7 @@
     font-style: italic;
     font-weight: 900;
     font-display: swap;
-    src: url(fonts/Roboto-italic-900.woff2) format('woff2');
+    src: url('/fonts/Roboto-italic-900.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -131,7 +131,7 @@
     font-style: normal;
     font-weight: 100;
     font-display: swap;
-    src: url(fonts/Roboto-normal-100.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-100.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -141,7 +141,7 @@
     font-style: normal;
     font-weight: 100;
     font-display: swap;
-    src: url(fonts/Roboto-normal-100.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-100.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -151,7 +151,7 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url(fonts/Roboto-normal-300.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-300.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -161,7 +161,7 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url(fonts/Roboto-normal-300.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-300.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -171,7 +171,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(fonts/Roboto-normal-400.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-400.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -181,7 +181,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(fonts/Roboto-normal-400.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-400.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -191,7 +191,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url(fonts/Roboto-normal-500.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-500.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -201,7 +201,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url(fonts/Roboto-normal-500.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-500.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -211,7 +211,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(fonts/Roboto-normal-700.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-700.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -221,7 +221,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(fonts/Roboto-normal-700.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-700.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
@@ -231,7 +231,7 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url(fonts/Roboto-normal-900.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-900.woff2') format('woff2');
     unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
 
@@ -241,6 +241,6 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url(fonts/Roboto-normal-900.woff2) format('woff2');
+    src: url('/fonts/Roboto-normal-900.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
